# MindVault

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-TW.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: notes.md
data.example/: notes.md
data.example/articles/: welcome.md
data/articles/: ai-knowledge-management.md  claude-code-evolution.md  claude-code-harness.md  claude-code-tips-muggles.md  claudecode-source-research.md  clawfactory-business-model.md  harness-engineering.md  pm-ai-coding-advantage.md  top-5-claude-mcps.md  what-is-mindvault.md  不會設計也能做出好產品.md
data/conversations/: 2026-02-28-conversation-2212.md  2026-03-01-conversation-1424.md  2026-03-01-conversation-1440.md  2026-03-02-conversation-1814.md  2026-03-05-conversation-0005.md  2026-03-19-conversation-0950.md  2026-03-20-conversation-0150.md  2026-03-23-conversation-1806.md  2026-03-24-conversation-1745.md  2026-03-24-conversation-2015.md  2026-03-29-conversation-1535.md  2026-03-29-conversation-2033.md  2026-04-02-conversation-1656.md  (+9 more)
docs/: ai-providers.md  api-reference.md  architecture.md  configuration.md  data-management.md  deployment.md  getting-started.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
specs/: mindvault-enhancements.md  open-source-prep-walkthrough.md  open-source-prep.md  rwd-mobile-support-walkthrough.md  rwd-mobile-support.md  wiki-ingest-rate-limiting-walkthrough.md
src/: config.py  main.py
src/ai/: base.py  (+4 more)
(+22 files in other folders)
